--- a/content/profile-picture.mdx
+++ b/content/profile-picture.mdx
@@ -11,7 +11,7 @@ Hello everyone,
 
 Today, I'd like to share the story behind the profile picture you see on my Tech with Anirudh forum account—a peaceful winter scene.
 
-![Winter Scene](/icon.png)
+![Winter Scene](/images/icon.png)
 
 Previously, I was an admin on a vibrant forum named "Coders Airbus." The community, founded and managed by Michele, flourished as a private forum with over 2,000 active members. We spent nearly four wonderful years sharing ideas, collaborating, and enjoying the camaraderie.
 
