--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -4,7 +4,7 @@ description: This first blog post marks the start of a new journey in sharing id
 date: 2025-05-09
 tags: ['moderation', 'blogging', 'learning']
 image: /images/blog/first-post.png
-author: Kyle
+author: Anirudh
 ---
 
 Welcome! I’m **Winter**, a forum fanatic, an all‑round community guy.  
