--- a/content/profile-picture.mdx
+++ b/content/profile-picture.mdx
@@ -4,7 +4,7 @@ description: Discover the story behind my profile picture.
 date: 2025-05-09
 tags: ['moderation', 'blogging', 'memory']
 image: /images/blog/pages.png
-author: Kyle
+author: Anirudh
 ---
 
 Hello everyone,
