--- a/content/blog/profile-picture.mdx
+++ b/content/blog/profile-picture.mdx
@@ -2,16 +2,16 @@
 title: "The Story Behind My Profile Picture"
 description: Discover the story behind my profile picture.
 date: 2025-05-09
-tags: ['moderation', 'blogging', 'memory']
+tags: ['profile', 'story', 'memory']
 image: /images/blog/pages.png
 author: Anirudh
 ---
 
 Hello everyone,
 
-Today, I'd like to share the story behind the profile picture you see on my Tech with Anirudh forum account—a peaceful winter scene.
+Today, I'd like to share the story behind the profile photo you see across my Tech with Anirudh presence.
 
-![Winter Scene](/images/icon.png)
+![Profile Photo](/images/icon.png)
 
 Previously, I was an admin on a vibrant forum named "Coders Airbus." The community, founded and managed by Michele, flourished as a private forum with over 2,000 active members. We spent nearly four wonderful years sharing ideas, collaborating, and enjoying the camaraderie.
 
