--- a/content/work/hello-world.mdx
+++ b/content/work/hello-world.mdx
@@ -2,14 +2,14 @@
 title: "Hello World"
 description: This first blog post marks the start of a new journey in sharing ideas, learnings, and experiences. It sets the tone for curiosity, creativity, and personal growth, laying the foundation for future explorations in tech and storytelling.
 date: 2025-05-09
-tags: ['moderation', 'blogging', 'learning']
+tags: ['intro', 'tech', 'learning']
 image: /images/blog/first-post.png
 author: Anirudh
 ---
 
-Welcome! I’m **Winter**, a forum fanatic, an all‑round community guy.  
-This site is my new basecamp for everything I’m cooking up: notes on growing friendly online spaces, and a sprinkle of chess tactics.
+Welcome! I’m **Anirudh**, a tech enthusiast who loves building web and AI projects.  
+This site is my basecamp for sharing projects, experiments, and lessons from robotics, Python, and AI.
 
-I’ll keep posts informal, think behind‑the‑scenes drama, moderation war stories, and the odd meme when the mood strikes. 
+I’ll keep posts informal—behind-the-scenes builds, research notes, and demos from my latest work.
 
-Have a look around, smash that contact form if you spot something off, and check back soon—first proper article drops next month. Glad you’re here!
+Have a look around, say hello if something sparks your interest, and check back soon for more updates. Glad you’re here!
