--- a/content/work/daily_diary.mdx
+++ b/content/work/daily_diary.mdx
@@ -1,10 +1,25 @@
 ---
 title: Daily Diary
-description: Daily Diary offers a private and secure platform for users to express their thoughts and feelings. It's more than a diary; it's a community where experiences are shared and supported, promoting mental health and well-being.
+description: React + Bootstrap journaling interface focused on lightweight personal entries.
 date: 2022-07-30
 website: https://diary.techwithanirudh.com/
 image: /images/projects/daily_diary/cover.jpg
 tags: ['ReactJS', 'Bootstrap']
 ---
 
-Daily Diary offers a private and secure platform for users to express their thoughts and feelings. It's more than a diary; it's a community where experiences are shared and supported, promoting mental health and well-being.
+Daily Diary is a simple React journaling UI designed around quick entry creation and a distraction-free reading experience. The interface relies on Bootstrap for layout and forms, which keeps the styling minimal while still providing responsive structure for mobile use.
+
+The project focuses on the frontend flow—compose, list, and review entries—while leaving storage and backend integration open for later. It is built as a lightweight SPA with a straightforward component hierarchy and minimal configuration.
+
+<Tabs items={['Highlights', 'Stack']}>
+  <Tab value="Highlights">
+    - Entry composer with list and detail views.
+    - Bootstrap-driven layout tuned for readability.
+    - Client-only workflow ready for backend integration.
+  </Tab>
+  <Tab value="Stack">
+    - React + Bootstrap.
+    - Standard CRA-style build scripts.
+    - Lightweight dependency footprint.
+  </Tab>
+</Tabs>
