--- a/content/work/maskio.mdx
+++ b/content/work/maskio.mdx
@@ -1,11 +1,26 @@
 ---
 title: Maskio
-description: Maskio is an action-packed game that combines adventure with a timely theme of fighting a virus outbreak. Players use vaccine-powered weapons to combat the virus, promoting awareness in a fun and engaging way.
+description: KaboomJS arcade game bundled with esbuild and served from a small Node/Express runtime.
 date: 2021-08-10
 website: https://maskio.techwithanirudh.com/
 github: https://github.com/techwithanirudh/Maskio
 image: /images/projects/maskio/cover.jpg
-tags: ['KaboomJS', 'Game Development', 'GitHub Game Jam']
+tags: ['KaboomJS', 'Game Development', 'Node.js']
 ---
 
-Maskio is an action-packed game that combines adventure with a timely theme of fighting a virus outbreak. Players use vaccine-powered weapons to combat the virus, promoting awareness in a fun and engaging way.
+Maskio is a KaboomJS browser game that keeps the runtime lean while still shipping a complete gameplay loop. The project uses esbuild to bundle assets quickly and a small Express server to serve the build during development and production.
+
+Gameplay logic stays inside Kaboom’s scene system, while the Node scripts handle build, dev, and static serving. This keeps the pipeline simple: iterate in dev with nodemon, generate a bundle with `build.js`, and serve the output with a minimal Express server.
+
+<Tabs items={['Highlights', 'Stack']}>
+  <Tab value="Highlights">
+    - KaboomJS scenes, sprites, and collision handling.
+    - esbuild bundle pipeline for fast builds.
+    - Express server for local runtime and static delivery.
+  </Tab>
+  <Tab value="Stack">
+    - KaboomJS, Node.js, Express.
+    - esbuild, nodemon.
+    - Lightweight scripts for build and serve.
+  </Tab>
+</Tabs>
