--- a/content/work/classnotes_buddy.mdx
+++ b/content/work/classnotes_buddy.mdx
@@ -1,10 +1,25 @@
 ---
 title: Classnotes Buddy
-description: Classnotes Buddy is an educational platform that promotes collaborative learning. Students can share and access notes easily, facilitating better study habits and knowledge retention. It's particularly useful in remote learning environments, enhancing accessibility and community learning.
+description: Turborepo T3 stack with Supabase auth and shared web + mobile notes workflows.
 date: 2023-01-18
 website: https://notes.techwithanirudh.com/
 image: /images/projects/classnotes_buddy/cover.jpg
-tags: ['ReactJS', 'Express', 'Firebase', 'TailwindCSS']
+tags: ['Turborepo', 'Supabase', 'Next.js', 'Expo', 'Drizzle']
 ---
 
-Classnotes Buddy is an educational platform that promotes collaborative learning. Students can share and access notes easily, facilitating better study habits and knowledge retention. It's particularly useful in remote learning environments, enhancing accessibility and community learning.
+Classnotes Buddy is a Turborepo refactor that ships a web app and an Expo mobile client from the same workspace. The project extends the create-t3-turbo stack with Supabase Auth, Drizzle-managed schemas, and shared tooling so both apps can use a consistent notes workflow.
+
+The repo documents the Supabase setup in detail, including auth redirect rules, SQL triggers to sync user profiles, and environment templates for local and preview deployments. Turbo pipelines handle dev/build/lint/typecheck so the monorepo stays fast even with multiple apps.
+
+<Tabs items={['Highlights', 'Stack']}>
+  <Tab value="Highlights">
+    - Web + mobile apps in one workspace (`apps/nextjs` and `apps/expo`).
+    - Supabase auth with email/OAuth flows and profile triggers.
+    - Drizzle migrations and schema tooling for Postgres.
+  </Tab>
+  <Tab value="Stack">
+    - Turborepo, pnpm workspaces, TypeScript.
+    - Supabase Auth + Postgres, Drizzle ORM.
+    - Expo mobile app + Next.js web client.
+  </Tab>
+</Tabs>
