chore: add screenshots

--- a/content/work/ai_tutor.mdx
+++ b/content/work/ai_tutor.mdx
@@ -3,7 +3,7 @@ title: AI Tutor
 description: Next.js 16 AI learning workspace with chat, quizzes, flashcards, and voice sessions.
 date: 2023-11-20
 website: https://tutor.techwithanirudh.com
-image: /images/projects/ai_tutor/cover.jpg
+image: /images/projects/ai_tutor/cover.png
 tags: ['Next.js', 'AI', 'Drizzle', 'NextAuth', 'LiveKit']
 ---
 
