--- a/content/work/anikode.mdx
+++ b/content/work/anikode.mdx
@@ -3,7 +3,7 @@ title: AniKode Website Builder
 description: Next.js website builder with a GrapesJS editor, Drizzle persistence, and NextAuth auth flows.
 date: 2023-06-15
 website: https://anikode.techwithanirudh.com/
-image: /images/projects/anikode/cover.jpg
+image: /images/projects/anikode/cover.png
 tags: ['Next.js', 'GrapesJS', 'Drizzle ORM', 'NextAuth', 'TailwindCSS']
 ---
 
