--- a/content/work/autonomous_driving.mdx
+++ b/content/work/autonomous_driving.mdx
@@ -4,7 +4,7 @@ description: Python OpenCV + MediaPipe prototype exploring face-mesh triangulati
 date: 2022-04-15
 website: https://osf.io/mtfpy/
 github: https://github.com/techwithanirudh/AutonomousDrivingPaperCode/
-image: /images/projects/autonomous_driving/cover.jpg
+image: /images/projects/autonomous_driving/cover.png
 tags: ['Research', 'AI', 'Autonomous Driving', 'Privacy']
 ---
 
