--- a/content/work/classnotes_buddy.mdx
+++ b/content/work/classnotes_buddy.mdx
@@ -3,7 +3,7 @@ title: Classnotes Buddy
 description: Turborepo T3 stack with Supabase auth and shared web + mobile notes workflows.
 date: 2023-01-18
 website: https://notes.techwithanirudh.com/
-image: /images/projects/classnotes_buddy/cover.jpg
+image: /images/projects/classnotes_buddy/cover.png
 tags: ['Turborepo', 'Supabase', 'Next.js', 'Expo', 'Drizzle']
 ---
 
