--- a/content/work/discord_ai_bot.mdx
+++ b/content/work/discord_ai_bot.mdx
@@ -3,6 +3,7 @@ title: Discord AI Bot
 description: Bun-powered Discord bot with Vercel AI SDK integrations, voice support, and modular tooling.
 date: 2025-10-21
 github: https://github.com/techwithanirudh/discord-ai-bot
+image: /images/projects/discord_ai_bot/cover.png
 tags: ['Discord', 'AI', 'Bun', 'TypeScript']
 ---
 
