--- a/content/work/portfolio.mdx
+++ b/content/work/portfolio.mdx
@@ -4,7 +4,7 @@ description: Next.js portfolio powered by Fumadocs MDX content, typed metadata, 
 date: 2026-01-12
 website: /portfolio
 github: https://github.com/techwithanirudh/portfolio
-image: /images/projects/portfolio/cover.jpg
+image: /images/projects/portfolio/cover.png
 tags: ['Next.js', 'Fumadocs', 'Drizzle', 'MDX', 'TypeScript']
 ---
 
