--- a/content/work/shadcn_saas_landing.mdx
+++ b/content/work/shadcn_saas_landing.mdx
@@ -4,6 +4,7 @@ description: Next.js landing template with Fumadocs docs pipeline, Drizzle datab
 date: 2026-01-10
 website: https://saas-landing.techwithanirudh.com/
 github: https://github.com/techwithanirudh/shadcn-saas-landing
+image: /images/projects/shadcn_saas_landing/cover.png
 tags: ['Next.js', 'Fumadocs', 'Drizzle', 'shadcn/ui', 'TypeScript']
 ---
 
