fix: correct contractions in various markdown files

--- a/content/blog/hello-world.mdx
+++ b/content/blog/hello-world.mdx
@@ -7,9 +7,9 @@ image: /images/blog/first-post.png
 author: Anirudh
 ---
 
-Welcome! I’m **Anirudh**. I like building web and AI projects.  
+Welcome! I'm **Anirudh**. I like building web and AI projects.  
 This site is my basecamp for sharing projects, experiments, and lessons from recent builds and ideas.
 
-I’ll keep posts informal behind-the-scenes builds, research notes, and demos from my latest work.
+I'll keep posts informal behind-the-scenes builds, research notes, and demos from my latest work.
 
-Have a look around, say hello if something sparks your interest, and check back soon for more updates. Glad you’re here!
+Have a look around, say hello if something sparks your interest, and check back soon for more updates. Glad you're here!
