--- a/content/work/discord_ai_bot.mdx
+++ b/content/work/discord_ai_bot.mdx
@@ -9,7 +9,7 @@ tags: ['Discord', 'AI', 'Bun', 'TypeScript']
 
 Discord AI Bot is a Bun-based TypeScript runtime that pairs discord.js with the Vercel AI SDK. The bot is designed to swap AI providers easily and supports both text and voice flows, with optional speech tooling layered into the same command pipeline.
 
-The runtime keeps command registration, event handling, and AI tool execution modular so new skills can be added without touching the core. Voice features rely on Discord’s voice stack plus Deepgram and ElevenLabs, while Upstash Redis is used to rate-limit and protect long-running requests.
+The runtime keeps command registration, event handling, and AI tool execution modular so new skills can be added without touching the core. Voice features rely on Discord's voice stack plus Deepgram and ElevenLabs, while Upstash Redis is used to rate-limit and protect long-running requests.
 
 <Tabs items={['Highlights', 'Stack']}>
   <Tab value="Highlights">
