--- a/content/work/maskio.mdx
+++ b/content/work/maskio.mdx
@@ -10,7 +10,7 @@ tags: ['KaboomJS', 'Game Development', 'Node.js']
 
 Maskio is a KaboomJS browser game that keeps the runtime lean while still shipping a complete gameplay loop. The project uses esbuild to bundle assets quickly and a small Express server to serve the build during development and production.
 
-Gameplay logic stays inside Kaboom’s scene system, while the Node scripts handle build, dev, and static serving. This keeps the pipeline simple: iterate in dev with nodemon, generate a bundle with `build.js`, and serve the output with a minimal Express server.
+Gameplay logic stays inside Kaboom's scene system, while the Node scripts handle build, dev, and static serving. This keeps the pipeline simple: iterate in dev with nodemon, generate a bundle with `build.js`, and serve the output with a minimal Express server.
 
 <Tabs items={['Highlights', 'Stack']}>
   <Tab value="Highlights">
