--- a/content/work/speaking_meeting_bot.mdx
+++ b/content/work/speaking_meeting_bot.mdx
@@ -9,7 +9,7 @@ tags: ['Python', 'FastAPI', 'Pipecat', 'MeetingBaaS', 'WebSocket']
 
 Speaking Meeting Bot is a Python 3.11 FastAPI service that runs real-time meeting agents through Pipecat. It exposes REST and WebSocket endpoints for bot creation, and uses MeetingBaaS APIs to join Google Meet or Teams calls with distinct persona profiles.
 
-Personas are stored in Markdown files so behavior, tone, and knowledge can be tuned without touching code. The audio stack combines Pipecat’s pipeline with STT/TTS providers and OpenAI reasoning, while deployment tooling supports local ngrok tunnels and production base URLs.
+Personas are stored in Markdown files so behavior, tone, and knowledge can be tuned without touching code. The audio stack combines Pipecat's pipeline with STT/TTS providers and OpenAI reasoning, while deployment tooling supports local ngrok tunnels and production base URLs.
 
 <Tabs items={['Highlights', 'Stack']}>
   <Tab value="Highlights">
