fix: update website URL in portfolio metadata

--- a/content/work/portfolio.mdx
+++ b/content/work/portfolio.mdx
@@ -2,7 +2,7 @@
 title: Portfolio
 description: Next.js portfolio powered by Fumadocs MDX content, typed metadata, and a lightweight contact pipeline.
 date: 2026-01-12
-website: /portfolio
+website: https://www.techwithanirudh.com
 github: https://github.com/techwithanirudh/portfolio
 image: /images/projects/portfolio/cover.png
 tags: ['Next.js', 'Fumadocs', 'Drizzle', 'MDX', 'TypeScript']
